# zsplg

./: .gitmodules  Cargo.toml  README.md
core/: Cargo.toml  README.md  build.rs
core/src/: dyn_.rs  fatptr.rs  lib.rs
core/tests/: simple.rs
docs/ground/: CMakeLists.txt  dtors4plugins.c  dtors4plugins.h  dtors4plugins.rs  plg.c  plg.h  plg.rs  plg4plugins.h  plgmm.cxx  plgmm.hpp
zsplg/: Cargo.toml  cbindgen.toml
zsplg/src/: ffi.rs  ffi_extern.rs  ffi_intern.rs  lib.rs  loader.rs
