[package]
name = "zsplg"
description = "Zscheile plugin library"
version = "0.0.0-alpha2"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
keywords = ["ffi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zsplg/tree/master/zsplg"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
zsplg-core = { path = "../core", version = "0.0.0-alpha2" }
libloading = "0.5"
os_str_bytes = "0.1.3"
try-block = "0.1.0"
