[package]
name = "zsplg"
description = "Zscheile plugin library"
version = "0.0.0-alpha2"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
keywords = ["ffi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zsplg/tree/master/zsplg"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["loader"]
loader = ["libloading", "try-block"]

[dependencies]
libloading = { version = "0.5", optional = true }
os_str_bytes = "0.2"
try-block = { version = "0.1", optional = true }
zsplg-core = { path = "../core", version = "0.0.0-alpha2" }
